# cookiecutter-agthub-project

./: README.md  cookiecutter.json  mkdocs.yml
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: Dockerfile  README.md  pyproject.toml  requirements.txt
{{ cookiecutter.project_slug }}/src/{{cookiecutter.project_slug}}/: database.py  log.py  main.py
{{ cookiecutter.project_slug }}/src/{{cookiecutter.project_slug}}/.well_known/: ai_plugin.json
{{ cookiecutter.project_slug }}/src/{{cookiecutter.project_slug}}/models/: __init__.py  base_model.py  item.py  user.py
{{ cookiecutter.project_slug }}/src/{{cookiecutter.project_slug}}/models/dao/: base_dao.py  item_dao.py  user_dao.py
{{ cookiecutter.project_slug }}/src/{{cookiecutter.project_slug}}/models/repository/: base_repo.py  item_repo.py  user_repo.py
{{ cookiecutter.project_slug }}/src/{{cookiecutter.project_slug}}/routers/: agent_router.py  item_router.py  user_router.py
{{ cookiecutter.project_slug }}/src/{{cookiecutter.project_slug}}/schemas/: schemas.py
{{ cookiecutter.project_slug }}/src/{{cookiecutter.project_slug}}/services/: __init__.py  item_service.py  user_service.py
